Added progress bar when loading images.

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
-- load images in seperate thread
-- central method to load preferences
+- don't load the same file twice
++ load images in seperate thread with progress bar
++ central method to load preferences
 - handle default preference values
-- recursively load directories
++ recursively load directories
 - store metadata in the model
 - more speedy propagation of properties in Photosession objects
 - store changes in Filesystem
